fix demo div overlapping settings button

--- a/src/index.css
+++ b/src/index.css
@@ -307,3 +307,18 @@ ul.nav li.active {
   color: whitesmoke;
   border-radius: 5px;
 }
+
+.tabs .demo {
+  width: 70%;
+  font-size: 15px;
+  padding-bottom: 20px;
+  color: red;
+  text-align: center;
+  text-justify: inter-word;
+}
+
+@media screen and (max-width: 768px) {
+  .tabs .demo {
+      grid-template-columns: 1fr;
+  }
+}
